update producs page

--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <figure id="logo" class="columns six" data-hook><%= logo img_options: { class: 'img-responsive', width: '138'} %></figure>
+      <figure id="logo" class="columns six" data-hook><%= logo %></figure>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
