Cleaning Product Detail page

--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :order, url: populate_orders_path do |f| %>
+<%= form_for :order, url: populate_orders_path, html:{ class: "form-inline" } do |f| %>
   <div id="inside-product-cart-form" data-hook="inside_product_cart_form" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
 
     <% if @product.variants_and_option_values_for(current_pricing_options).any? %>
@@ -34,9 +34,9 @@
         <div id="product-price">
           <h6 class="product-section-title"><%= t('spree.price') %></h6>
           <div>
-            <span class="price selling" itemprop="price" content="<%= @product.price_for(current_pricing_options).to_d %>">
+            <p class="price selling lead" itemprop="price" content="<%= @product.price_for(current_pricing_options).to_d %>">
               <%= display_price(@product) %>
-            </span>
+            </p>
             <span itemprop="priceCurrency" content="<%= current_pricing_options.currency %>"></span>
           </div>
 
@@ -48,9 +48,9 @@
           <% end %>
         </div>
 
-        <div class="add-to-cart">
-          <%= number_field_tag :quantity, 1, class: 'title', min: 1 %>
-          <%= button_tag class: 'large primary', id: 'add-to-cart-button', type: :submit do %>
+        <div class="add-to-cart form-group">
+          <%= number_field_tag :quantity, 1, class: 'title form-control', min: 1 %>
+          <%= button_tag class: 'large primary', id: 'add-to-cart-button', class: 'btn btn-success', type: :submit do %>
             <%= t('spree.add_to_cart') %>
           <% end %>
         </div>
