--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,51 +1,55 @@
 <% cache [I18n.locale, current_pricing_options, @product] do %>
   <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
     <% @body_id = 'product-details' %>
-
-    <div class="columns six alpha" data-hook="product_left_part">
-      <div class="row" data-hook="product_left_part_wrap">
-
-        <div id="product-images" data-hook="product_images">
-          <div id="main-image" data-hook>
-            <%= render partial: 'image' %>
-          </div>
-          <div id="thumbnails" data-hook>
-            <%= render partial: 'thumbnails' %>
-          </div>
-        </div>
-
-        <div data-hook="product_properties">
-          <%= render partial: 'properties' %>
-        </div>
-
-        <div data-hook="promotions">
-          <%= render partial: 'promotions' %>
-        </div>
-
+    <div class ="row">
+      <div class="col-md-12">
+        <h1 class="product-title" itemprop="name"><%= @product.name %></h1>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-3" data-hook="product_left_part">
+        <div data-hook="product_left_part_wrap">
 
-    <div class="columns ten omega" data-hook="product_right_part">
-      <div class="row" data-hook="product_right_part_wrap">
-
-        <div id="product-description" data-hook="product_description">
-
-          <h1 class="product-title" itemprop="name"><%= @product.name %></h1>
-
-          <div itemprop="description" data-hook="description">
-            <%= product_description(@product) rescue t('spree.product_has_no_description') %>
+          <div id="product-images" data-hook="product_images">
+            <div id="main-image" data-hook>
+              <%= render partial: 'image' %>
+            </div>
+            <div id="thumbnails" data-hook>
+              <%= render partial: 'thumbnails' %>
+            </div>
           </div>
-
-          <div id="cart-form" data-hook="cart_form">
-            <%= render partial: 'cart_form' %>
+          <div data-hook="promotions">
+            <%= render partial: 'promotions' %>
           </div>
 
         </div>
+      </div>
+      <div class="col-md-3" data-hook="product_center_part">
+        <div data-hook="product_center_part_wrap">
+          <div data-hook="product_properties">
+            <%= render partial: 'properties' %>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col-md-6" data-hook="product_right_part">
+      <h6 class="product-section-title"><%= t('spree.detail')%></h6>
 
-        <%= render partial: 'taxons' %>
+        <div data-hook="product_right_part_wrap" class="panel panel-default">
+          <div class="panel-body">
+            <div id="product-description" data-hook="product_description">
+              <div itemprop="description" data-hook="description">
+                <%= product_description(@product) rescue t('spree.product_has_no_description') %>
+              </div>
 
+              <div id="cart-form" data-hook="cart_form">
+                <%= render partial: 'cart_form' %>
+              </div>
+            </div>
+            <%= render partial: 'taxons' %>
+          </div>
+        </div>
       </div>
     </div>
-
   </div>
 <% end %>
