--- a/app/views/spree/base/_application.html.erb
+++ b/app/views/spree/base/_application.html.erb
@@ -1,10 +1,10 @@
 <%= render partial: 'spree/shared/header' %>
-<div class="container">
+<div class="main-container">
     <div id="wrapper" class="row" data-hook>
 
         <%= taxon_breadcrumbs(@taxon) %>
 
-        <%= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
+        <%#= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
 
         <div id="content" class="columns <%= !content_for?(:sidebar) ? "sixteen" : "twelve omega" %>" data-hook>
             <%= flash_messages %>
