--- a/app/views/spree/orders/show.html.erb
+++ b/app/views/spree/orders/show.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: 'spree/shared/secondary_header' %>
+
 <fieldset id="order_summary" data-hook>
   <legend><%= t('spree.order_number', number: @order.number) %></legend>
   <h1><%= accurate_title %></h1>
