--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -1,6 +1,8 @@
+<%= render partial: 'spree/shared/secondary_header' %>
+
 <% @body_id = 'cart' %>
-<div data-hook="cart_container">
-  <h1><%= t('spree.shopping_cart') %></h1>
+<div class="container" data-hook="cart_container">
+  <!--h1><%#= t('spree.shopping_cart') %></h1-->
 
   <% if @order.line_items.empty? %>
 
@@ -20,11 +22,11 @@
           </div>
           <hr>
           <div class="links columns sixteen alpha omega" data-hook="cart_buttons">
-            <%= order_form.text_field :coupon_code, size: 10, placeholder: t('spree.coupon_code'), class: 'form-control' %>
-            <%= button_tag class: 'primary btn btn-success', id: 'update-button' do %>
+            <%= order_form.text_field :coupon_code, size: 10, placeholder: t('spree.coupon_code'), class: 'form-control overrid_coupon' %>
+            <%= button_tag class: 'primary btn btn-success overrid_order_button', id: 'update-button' do %>
               <%= t('spree.update') %>
             <% end %>
-            <%= button_tag class: 'button checkout primary btn btn-primary', id: 'checkout-link', name: 'checkout' do %>
+            <%= button_tag class: 'button checkout primary btn btn-primary overrid_order_button', id: 'checkout-link', name: 'checkout' do %>
               <%= t('spree.checkout') %>
             <% end %>
           </div>
@@ -36,9 +38,9 @@
     <div id="empty-cart" data-hook>
       <%= form_tag empty_cart_path, method: :put do %>
         <p id="clear_cart_link" data-hook>
-        <%= submit_tag t('spree.empty_cart'), class: 'button gray btn btn-default' %>
+        <%= submit_tag t('spree.empty_cart'), class: 'button gray btn btn-default overrid_order_button' %>
         <%= t('spree.or') %>
-        <%= link_to t('spree.continue_shopping'), products_path, class: 'continue button gray btn btn-default' %>
+        <%= link_to t('spree.continue_shopping'), products_path, class: 'continue button gray btn btn-default overrid_order_button' %>
         </p>
       <% end %>
     </div>
