--- a/app/views/spree/products/_properties.html.erb
+++ b/app/views/spree/products/_properties.html.erb
@@ -1,9 +1,9 @@
 <% unless @product_properties.empty? %>  
-  <h6 class="product-section-title"><%= t('spree.properties')%></h6>
+  <!--h6 class="product-section-title"><%#= t('spree.properties')%></h6-->
   <ul id="product-properties" class="list-group" data-hook>
       <% @product_properties.each do |product_property| %>
         <% css_class = cycle('even', 'odd', name: "properties") %>
-        <li class="<%= css_class %> list-group-item">
+        <li class="<%= css_class %> list-group-item" style="border:0px">
         <span class="badge"><%= product_property.value %></span>
           <%= product_property.property.presentation %>
         </li>
