--- a/app/views/spree/products/_taxons.html.erb
+++ b/app/views/spree/products/_taxons.html.erb
@@ -1,14 +1,19 @@
 <% if !@product.taxons.blank? %>
-  <div id="taxon-crumbs" data-hook class="alpha columns five omega">
-    <h6 class="product-section-title"><%= t('spree.look_for_similar_items') %></h6>
-
-    <div data-hook="product_taxons">
-      <ul id="similar_items_by_taxon" data-hook>
-      <% @product.taxons.each do |taxon| %>
-        <li><%= link_to taxon.name, seo_url(taxon) %></li>
-      <% end %>
-      </ul>
-    </div>
-
-  </div>
+  <section class="products-grid related-products no-padding-top">
+    <div class="container">
+      <div class="row products-container">
+        <% @product.taxons.each do |taxon| %>
+          <div class="col-md-4 col-sm-6 col-xs-12 product">
+            <div class="thumbnail" style="background-image: url(<%= taxon.icon.url %>);">
+              <div class="product-details text-center">
+                <div class="align-vertical">
+                  <h3><%= link_to taxon.name, seo_url(taxon) %></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div><!-- /.row -->
+    </div><!-- /.container -->
+  </section>
 <% end %>
