--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,53 +1,37 @@
-<% cache [I18n.locale, current_pricing_options, @product] do %>
-  <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
-    <% @body_id = 'product-details' %>
-    <div class ="row">
-      <div class="col-md-12">
-        <h1 class="product-title" itemprop="name"><%= @product.name %></h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3" data-hook="product_left_part">
-        <div data-hook="product_left_part_wrap">
+<%= render partial: 'spree/shared/secondary_header' %>
 
-          <div id="product-images" data-hook="product_images">
-            <div id="main-image" data-hook>
-              <%= render partial: 'image' %>
-            </div>
-            <div id="thumbnails" data-hook>
-              <%= render partial: 'thumbnails' %>
-            </div>
-          </div>
-          <div data-hook="promotions">
-            <%= render partial: 'promotions' %>
-          </div>
+<% cache [I18n.locale, current_pricing_options, @product] do %>
+<section class="product-single">
+  <% @body_id = 'product-details' %>
+  <div class="container" data-hook="product_show" itemtype="http://schema.org/Product">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="product-main-image">
+          <!--img src="images/720x490.png" alt=""-->
+          <%= render partial: 'image' %>
         </div>
+        <%= render partial: 'thumbnails' %>
       </div>
-      <div class="col-md-3" data-hook="product_center_part">
+      <div class="col-md-3" data-hook="product_center_part" style="margin-top:40px">
         <div data-hook="product_center_part_wrap">
           <div data-hook="product_properties">
             <%= render partial: 'properties' %>
           </div>
         </div>
       </div>
-      
-      <div class="col-md-6" data-hook="product_right_part">
-      <h6 class="product-section-title"><%= t('spree.detail')%></h6>
-
-        <div data-hook="product_right_part_wrap" class="panel panel-default">
-          <div class="panel-body">
-            <div id="product-description" data-hook="product_description">
-              <div itemprop="description" data-hook="description">
-                <%= product_description(@product) rescue t('spree.product_has_no_description') %>
-              </div>
-              <div id="cart-form" data-hook="cart_form">
-                <%= render partial: 'cart_form' %>
-              </div>
-            </div>
-            <%= render partial: 'taxons' %>
+      <div class="col-md-5 col-md-offset-1">
+        <div class="product-details">
+          <h2 class="page-title product-name"><%= @product.name %></h2>
+          <p><%= product_description(@product) rescue t('spree.product_has_no_description') %></p>
+          <div id="cart-form" data-hook="cart_form">
+            <%= render partial: 'cart_form' %>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    </div><!-- /.row -->
+  </div><!-- /.container -->
+</section>
+
+<%= render partial: 'taxons' %>
+
 <% end %>
