--- a/app/views/spree/shared/_image.html.erb
+++ b/app/views/spree/shared/_image.html.erb
@@ -3,9 +3,9 @@
 
 <% if image && image.attachment? %>
   <% if itemprop %>
-    <%= image_tag image.attachment(size), itemprop: itemprop %>
+    <%= image_tag image.attachment(size), itemprop: itemprop, class: 'img-polaroid' %>
   <% else %>
-    <%= image_tag image.attachment(size) %>
+    <%= image_tag image.attachment(size), class: 'img-polaroid' %>
   <% end %>
 <% else %>
   <span class="image-placeholder <%= size %>"></span>
