--- a/app/views/spree/orders/_line_item.html.erb
+++ b/app/views/spree/orders/_line_item.html.erb
@@ -1,6 +1,6 @@
 <% variant = line_item.variant -%>
 <%= order_form.fields_for :line_items, line_item do |item_form| -%>
-  <tr class="<%= cycle('', 'alt') %> line-item product">
+  <tr class="<%= cycle('', 'alt') %> line-item product customed-font-normal">
     <td class="cart-item-image thumbnail" data-hook="cart_item_image">
       <% if variant.images.empty? %>
         <%= link_to(render('spree/shared/image', image: variant.product.display_image, size: :small), variant.product) %>
@@ -20,17 +20,17 @@
         <%= line_item_description_text(line_item.description) %>
       </span>
     </td>
+    <td class="cart-item-quantity" data-hook="cart_item_quantity">
+      <%= item_form.number_field :quantity, min: 0, class: "line_item_quantity form-control customed_input_width", size: 5 %>
+    </td>
     <td class="cart-item-price" data-hook="cart_item_price">
       <%= line_item.single_money.to_html %>
-    </td>
-    <td class="cart-item-quantity" data-hook="cart_item_quantity">
-      <%= item_form.number_field :quantity, min: 0, class: "line_item_quantity form-control", size: 5 %>
     </td>
     <td class="cart-item-total" data-hook="cart_item_total">
       <%= line_item.display_amount.to_html unless line_item.quantity.nil? %>
     </td>
     <td class="cart-item-delete" data-hook="cart_item_delete">
-      <%= link_to image_tag('icons/delete.png'), '#', class: 'delete', id: "delete_#{dom_id(line_item)}" %>
+      <%= link_to image_tag('icons/delete.png'), '#', class: 'delete customed_delete_image', id: "delete_#{dom_id(line_item)}" %>
     </td>
   </tr>
 <% end -%>
