--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-3" data-hook="product_center_part" style="margin-top:40px">
         <div data-hook="product_center_part_wrap">
-          <div data-hook="product_properties">
+          <div data-hook="product_properties" style="font-weight:normal">
             <%= render partial: 'properties' %>
           </div>
         </div>
