--- a/app/views/spree/base/_application.html.erb
+++ b/app/views/spree/base/_application.html.erb
@@ -2,12 +2,12 @@
 <div class="main-container">
     <div id="wrapper" class="row" data-hook>
 
-        <%= taxon_breadcrumbs(@taxon) %>
+        <%#= taxon_breadcrumbs(@taxon) %>
 
         <%#= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
 
         <div id="content" class="columns <%= !content_for?(:sidebar) ? "sixteen" : "twelve omega" %>" data-hook>
-            <%= flash_messages %>
+            <%#= flash_messages %>
             <%= yield %>
         </div>
 
