--- a/app/views/spree/checkout/_address.html.erb
+++ b/app/views/spree/checkout/_address.html.erb
@@ -7,7 +7,7 @@
   </fieldset>
 </div>
 
-<div class="columns omega six" data-hook="shipping_fieldset_wrapper">
+<div class="columns omega six" data-hook="shipping_fieldset_wrapper" style="margin-top: 30px;">
   <fieldset id="shipping" data-hook>
     <%= form.fields_for :ship_address do |ship_form| %>
       <legend align="center"><%= t('spree.shipping_address') %></legend>
@@ -24,9 +24,9 @@
 <div class="form-buttons" data-hook="buttons">
   <%= submit_tag t('spree.save_and_continue'), class: 'continue button primary' %>
   <% if try_spree_current_user %>
-    <span data-hook="save_user_address">
+    <span data-hook="save_user_address" class="customed_address_checkbox">
       &nbsp; &nbsp;
-      <%= check_box_tag 'save_user_address', '1', try_spree_current_user.respond_to?(:persist_order_address) %>
+      <%= check_box_tag 'save_user_address', '1',  try_spree_current_user.respond_to?(:persist_order_address) %>
       <%= label_tag :save_user_address, t('spree.save_my_address') %>
     </span>
   <% end %>
