--- a/app/views/spree/checkout/_delivery.html.erb
+++ b/app/views/spree/checkout/_delivery.html.erb
@@ -23,7 +23,7 @@
               <th><%= t('spree.qty') %></th>
               <th><%= t('spree.price') %></th>
             </thead>
-            <tbody>
+            <tbody style="font-weight:normal">
               <% ship_form.object.manifest.each do |item| %>
                 <tr class="stock-item">
                   <td class="item-image">
@@ -38,9 +38,9 @@
           </table>
 
           <h5 class="stock-shipping-method-title"><%= t('spree.shipping_method') %></h5>
-          <ul class="field radios shipping-methods">
+          <ul class="field radios shipping-methods list-group">
             <% ship_form.object.shipping_rates.each do |rate| %>
-              <li class="shipping-method">
+              <li class="shipping-method list-group-item d_customed_li">
                 <label>
                   <%= ship_form.radio_button :selected_shipping_rate_id, rate.id %>
                   <span class="rate-name"><%= rate.name %></span>
