--- a/app/views/spree/checkout/_summary.html.erb
+++ b/app/views/spree/checkout/_summary.html.erb
@@ -4,7 +4,7 @@
   <tbody>
     <tr data-hook="item_total">
       <td><strong><%= t('spree.item_total') %>:</strong></td>
-      <td><strong><%= order.display_item_total.to_html %></strong></td>
+      <td class="orange"><strong><%= order.display_item_total.to_html %></strong></td>
     </tr>
 
     <% if order.line_item_adjustments.nonzero.exists? %>
@@ -12,7 +12,7 @@
         <% order.line_item_adjustments.nonzero.promotion.eligible.group_by(&:label).each do |label, adjustments| %>
           <tr class="total">
             <td><%= label %></td>
-            <td><%= Spree::Money.new(adjustments.sum(&:amount), currency: order.currency).to_html %></td>
+            <td class="orange"><%= Spree::Money.new(adjustments.sum(&:amount), currency: order.currency).to_html %></td>
           </tr>
         <% end %>
       </tbody>
@@ -22,7 +22,7 @@
       <% order.all_adjustments.nonzero.tax.eligible.group_by(&:label).each do |label, adjustments| %>
         <tr class="total">
           <td><%= label %></td>
-          <td><%= Spree::Money.new(adjustments.sum(&:amount), currency: order.currency).to_html %></td>
+          <td class="orange"><%= Spree::Money.new(adjustments.sum(&:amount), currency: order.currency).to_html %></td>
         </tr>
       <% end %>
     </tbody>
@@ -30,7 +30,7 @@
     <% if order.passed_checkout_step?("delivery") && order.shipments.any? %>
       <tr data-hook="shipping_total">
         <td><%= t('spree.shipping_total') %>:</td>
-        <td><%= Spree::Money.new(order.shipments.to_a.sum(&:cost), currency: order.currency).to_html %></td>
+        <td class="orange"><%= Spree::Money.new(order.shipments.to_a.sum(&:cost), currency: order.currency).to_html %></td>
       </tr>
 
       <% if order.shipment_adjustments.nonzero.exists? %>
@@ -38,7 +38,7 @@
           <% order.shipment_adjustments.nonzero.promotion.eligible.group_by(&:label).each do |label, adjustments| %>
             <tr class="total">
               <td><%= label %>:</td>
-              <td><%= Spree::Money.new(adjustments.sum(&:amount), currency: order.currency).to_html %></td>
+              <td class="orange"><%= Spree::Money.new(adjustments.sum(&:amount), currency: order.currency).to_html %></td>
             </tr>
           <% end %>
         </tbody>
@@ -51,7 +51,7 @@
         <% next if (adjustment.source_type == 'Spree::TaxRate') and (adjustment.amount == 0) %>
           <tr class="total">
             <td><%= adjustment.label %>:</td>
-            <td><%= adjustment.display_amount.to_html %></td>
+            <td class="orange"><%= adjustment.display_amount.to_html %></td>
           </tr>
         <% end %>
       </tbody>
@@ -60,13 +60,13 @@
     <% if order.total_applicable_store_credit > 0.0 %>
       <tr data-hook="checkout-summary-store-credit">
         <td><%= t('spree.store_credit.store_credit') %>:</td>
-        <td><%= order.display_total_applicable_store_credit.to_html %></td>
+        <td class="orange"><%= order.display_total_applicable_store_credit.to_html %></td>
       </tr>
     <% end %>
 
     <tr data-hook="order_total">
       <td><strong><%= t('spree.order_total') %>:</strong></td>
-      <td><strong><span id='summary-order-total'><%= order.display_order_total_after_store_credit.to_html %></span></strong></td>
+      <td class="orange"><strong><span id='summary-order-total'><%= order.display_order_total_after_store_credit.to_html %></span></strong></td>
     </tr>
   </tbody>
 </table>
