--- a/app/views/spree/checkout/edit.html.erb
+++ b/app/views/spree/checkout/edit.html.erb
@@ -8,7 +8,7 @@
     <div class="columns thirteen omega" data-hook="checkout_progress"><%= checkout_progress %></div>
   </div>
 
-  <div class="row container" data-hook="checkout_content">
+  <div class="row container customed-address-container" data-hook="checkout_content">
     <div class="columns <%= if @order.state != 'confirm' then 'alpha twelve' else 'alpha omega sixteen' end %>" data-hook="checkout_form_wrapper">
       <%= form_for @order, url: update_checkout_path(@order.state), html: { id: "checkout_form_#{@order.state}" } do |form| %>
         <% if @order.state == 'address' || !@order.email? %>
@@ -20,6 +20,9 @@
         <%= render @order.state, form: form %>
       <% end %>
     </div>
+
+    <br class="space" />
+
     <% if @order.state != 'confirm' %>
       <div id="checkout-summary" data-hook="checkout_summary_box" class="columns omega four">
         <%= render partial: 'summary', locals: { order: @order } %>
