--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -15,7 +15,7 @@
 
     <div data-hook="outside_cart_form">
       <%= form_for @order, url: update_cart_path, html: {id: 'update-cart', class: 'form-inline'} do |order_form| %>
-        <div data-hook="inside_cart_form">
+        <div data-hook="inside_cart_form"  style="margin-top:20px"> 
 
           <div data-hook="cart_items">
             <%= render 'form', order_form: order_form %>
