--- a/app/views/spree/products/_properties.html.erb
+++ b/app/views/spree/products/_properties.html.erb
@@ -3,7 +3,7 @@
   <ul id="product-properties" class="list-group" data-hook>
       <% @product_properties.each do |product_property| %>
         <% css_class = cycle('even', 'odd', name: "properties") %>
-        <li class="<%= css_class %> list-group-item" style="border:0px">
+        <li class="<%= css_class %> list-group-item" style="border:0px; font-size:14px;">
         <span class="badge"><%= product_property.value %></span>
           <%= product_property.property.presentation %>
         </li>
