--- a/app/views/spree/taxons/show.html.erb
+++ b/app/views/spree/taxons/show.html.erb
@@ -1,4 +1,5 @@
-<h1 class="taxon-title"><%= @taxon.name %></h1>
+<!--h1 class="taxon-title"><%#= @taxon.name %></h1-->
+<%= render partial: 'spree/shared/secondary_header' %>
 
 <% content_for :sidebar do %>
   <div data-hook="taxon_sidebar_navigation">
