Cleaning up checkout, card

--- a/app/assets/stylesheets/spree/frontend/style.css
+++ b/app/assets/stylesheets/spree/frontend/style.css
@@ -2951,3 +2951,10 @@ img.mfp-img {
 .customed-max-width{
   max-width:300px !important;
 }
+.login-checkbox input{
+  width:20px;
+  height:20px;
+}
+body#login{
+  margin-top:40px;
+}
