--- a/app/views/spree/shared/_login.html.erb
+++ b/app/views/spree/shared/_login.html.erb
@@ -10,7 +10,7 @@
         <%= f.password_field :password, class: 'title form-control', tabindex: 2 %>
     </div>
     </div>
-    <div class="form-group">
+    <div class="form-group login-checkbox">
     <%= f.check_box :remember_me, tabindex: 3 %>
     <%= f.label :remember_me, Spree.t(:remember_me) %>
     </div>
