--- a/app/views/spree/shared/_order_details.html.erb
+++ b/app/views/spree/shared/_order_details.html.erb
@@ -7,11 +7,15 @@
       <%= render partial: 'spree/shared/address', locals: { address: order.bill_address } %>
     </div>
 
+    <br class="space" />
+
     <% if order.has_checkout_step?("delivery") %>
       <div class="columns alpha four" data-hook="order-ship-address">
         <h6><%= t('spree.shipping_address') %> <%= link_to "(#{t('spree.actions.edit')})", checkout_state_path(:address) unless order.completed? %></h6>
         <%= render partial: 'spree/shared/address', locals: { address: order.ship_address } %>
       </div>
+
+      <br class="space" />
 
       <div class="columns alpha four" data-hook="order-shipment">
         <h6><%= t('spree.shipments') %> <%= link_to "(#{t('spree.actions.edit')})", checkout_state_path(:delivery) unless order.completed? %></h6>
@@ -27,6 +31,8 @@
       </div>
     <% end %>
   <% end %>
+
+  <br class="space" />
 
   <% if order.has_checkout_step?("payment") %>
     <div class="columns omega four">
