--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <ul class="footer-navigation">
-                    <li class="active"><a href="./index.html">Home</a></li>
+                    <li class="active"><a href="#">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./catalog.html">Catalog</a></li>
                     <li><a href="./blog.html">Blog</a></li>
