--- a/app/views/spree/user_registrations/new.html.erb
+++ b/app/views/spree/user_registrations/new.html.erb
@@ -3,10 +3,10 @@
 <%= render 'spree/shared/error_messages', target: resource %>
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <div id="new-customer" class="panel panel-default">
-        <div class="panel-heading"><%= Spree.t(:new_customer) %></div>
+        <div id="new-customer">
+        <div class="alert alert-info "><%= Spree.t(:new_customer) %></div>
 
-        <div data-hook="signup" class="panel-body">
+        <div data-hook="signup">
             <%= form_for resource, as: :spree_user, url: spree.registration_path(resource) do |f| %>
             <div data-hook="signup_inside_form">
                 <%= render partial: 'spree/shared/user_form', locals: { f: f } %>
@@ -14,7 +14,7 @@
             </div>
             <% end %>
             <hr>
-            <%= Spree.t(:or) %>&nbsp;<%= link_to Spree.t(:login_as_existing), spree.login_path %>
+            <%= link_to Spree.t(:login_as_existing), spree.login_path %>
 
         </div>
 
