changed EStore root_path

--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -8,7 +8,7 @@
     <div class="background-image-holder overlay accent" data-stellar-background-ratio="0.9">
         <%= image_tag('1600x900.png', class: 'background-image', alt: 'Background Image') %>
     </div>
-    <div class="container">
+    <!--div class="container">
         <div class="row">
             <div class="col-md-5 text-left">
                 <h2 class="page-title">Join our newsletter</h2>
@@ -22,20 +22,20 @@
             <div class="col-md-3">
                 <a href="#" class="btn btn-primary">Join Now</a>
             </div>
-        </div><!--end of row-->
-    </div><!--end of container-->
+        </div--><!--end of row-->
+    <!--/div--><!--end of container-->
 </section>
 
 <footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <ul class="footer-navigation">
+                <!--ul class="footer-navigation">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="./about.html">About</a></li>
-                    <li><a href="./catalog.html">Catalog</a></li>
-                    <li><a href="./blog.html">Blog</a></li>
-                    <li><a href="./contact.html"><i class="fa fa-paper-plane"></i> Contact</a></li>
+                    <li><%#= link_to 'About', root_path %></li>
+                    <li><a href="#">Catalog</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#"><i class="fa fa-paper-plane"></i> Contact</a></li>
                 </ul>
                 <ul class="accepted-payments">
                     <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
@@ -43,7 +43,7 @@
                     <li><a href="#"><i class="fa fa-paypal"></i></a></li>
                     <li><a href="#"><i class="fa fa-cc-stripe"></i></a></li>
                     <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-                </ul>
+                </ul-->
                 <div class="copyright">
                     <p>Copyright © 2018 Brian' Customized Store. Created by Designifyer.com</p>
                 </div>
