--- a/app/assets/stylesheets/spree/frontend/style.css
+++ b/app/assets/stylesheets/spree/frontend/style.css
@@ -607,8 +607,8 @@ input[type="reset"]:focus {
 /* Icon font Linea */
 @font-face {
   font-family: "linea-basic-10";
-  src: url("../fonts/linea-basic-10.eot");
-  src: url("../fonts/linea-basic-10.eot?#iefix") format("embedded-opentype"), url("../fonts/linea-basic-10.woff") format("woff"), url("../fonts/linea-basic-10.ttf") format("truetype"), url("../fonts/linea-basic-10.svg#linea-basic-10") format("svg");
+  src: url("/assets/linea-basic-10.eot");
+  src: url("/assets/linea-basic-10.eot?#iefix") format("embedded-opentype"), url("/assets/linea-basic-10.woff") format("woff"), url("/assets/linea-basic-10.ttf") format("truetype"), url("/assets/linea-basic-10.svg#linea-basic-10") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -2213,8 +2213,8 @@ a.load-more {
 /* Icons */
 @font-face {
   font-family: "slick";
-  src: url("../fonts/slick.eot");
-  src: url("../fonts/slick.eot?#iefix") format("embedded-opentype"), url("../fonts/slick.woff") format("woff"), url("../fonts/slick.ttf") format("truetype"), url("../fonts/slick.svg#slick") format("svg");
+  src: url("/assets/slick.eot");
+  src: url("/assets/slick.eot?#iefix") format("embedded-opentype"), url("/assets/slick.woff") format("woff"), url("/assets/slick.ttf") format("truetype"), url("/assets/slick.svg#slick") format("svg");
   font-weight: normal;
   font-style: normal;
 }
