added a gem for solidus static page

--- a/app/views/spree/base/_devise.html.erb
+++ b/app/views/spree/base/_devise.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div id="wrapper" class="row" data-hook>
 
-        <%= taxon_breadcrumbs(@taxon) %>
+        <%#= taxon_breadcrumbs(@taxon) %>
 
         <%= render partial: 'spree/shared/sidebar' if content_for? :sidebar %>
 
