--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -68,7 +68,7 @@
 
                     <li><a href="#">Catalog</a></li>
                     <li><a href="#">Blog</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><%= link_to 'About', 'about' %></li>
                     <li>
                         <%= link_to root_path do %>
                             <i class="fa fa-paper-plane"></i> Contact
