Added about, blog and contact

--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -66,14 +66,14 @@
                         </li>
                     <% end %>
 
-                    <li><a href="#">Catalog</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><%= link_to 'Blog', 'blog' %></li>
                     <li><%= link_to 'About', 'about' %></li>
                     <li>
-                        <%= link_to root_path do %>
+                        <%= link_to 'contact' do %>
                             <i class="fa fa-paper-plane"></i> Contact
                         <% end %>
                     </li>
+
                     <!--li><a href="./contact.html"><i class="fa fa-paper-plane"></i> Contact</a></li-->
                     <!--a href="#" class="menu-cart"><i class="fa fa-shopping-cart"></i> $0.00</a-->
                     <% if (current_order != nil) then %>
