--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -25,11 +25,14 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <ul class="footer-navigation">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><%= link_to 'About', root_path %></li>
-                    <li><a href="#">Catalog</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#"><i class="fa fa-paper-plane"></i> Contact</a></li>
+                    <li class="active"><%= link_to 'Home', root_path %></li>
+                    <li><%= link_to 'Blog', 'blog' %></li>
+                    <li><%= link_to 'About', 'about' %></li>
+                     <li>
+                        <%= link_to 'contact' do %>
+                            <i class="fa fa-paper-plane"></i> Contact
+                        <% end %>
+                    </li>
                 </ul>
                 <ul class="accepted-payments">
                     <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
