--- a/app/views/spree/static_content/_about.html.erb
+++ b/app/views/spree/static_content/_about.html.erb
@@ -1,7 +1,7 @@
 <div class="main-container">
     <header class="secondary">
         <div class="background-image-holder parallax-background overlay" data-stellar-background-ratio="0.9">
-            <img class="background-image" alt="Background Image" src="/assets/1600x900.png">
+            <img class="background-image" alt="Background Image" src="/assets/bg-7.jpg">
         </div>
 
         <div class="container align-vertical hero">
