--- a/app/views/spree/static_content/_blog.html.erb
+++ b/app/views/spree/static_content/_blog.html.erb
@@ -1,7 +1,7 @@
 <div class="main-container">
     <header class="secondary">
         <div class="background-image-holder parallax-background overlay" data-stellar-background-ratio="0.9">
-            <img class="background-image" alt="Background Image" src="images/1600x900.png">
+            <img class="background-image" alt="Background Image" src="/assets/bg-7.jpg">
         </div>
 
         <div class="container align-vertical hero">
@@ -22,7 +22,7 @@
                         <div class="row">
                             <div class="col-md-6 col-xs-12">
                                 <div class="thumbnail with-info">
-                                    <img src="images/720x490.png" alt="">
+                                    <img src="/assets/720x490.png" alt="">
                                     <div class="info">
                                         <div class="align-vertical" style="padding-top: 13.25px;">
                                             <span>16</span>
@@ -49,7 +49,7 @@
                         <div class="row">
                             <div class="col-md-6 col-xs-12 col-md-offset-1">
                                 <div class="thumbnail with-info">
-                                    <img src="images/720x490.png" alt="">
+                                    <img src="/assets/720x490.png" alt="">
                                     <div class="info">
                                         <div class="align-vertical" style="padding-top: 13.25px;">
                                             <span>16</span>
@@ -76,7 +76,7 @@
                         <div class="row">
                             <div class="col-md-6 col-xs-12">
                                 <div class="thumbnail with-info">
-                                    <img src="images/720x490.png" alt="">
+                                    <img src="/assets/720x490.png" alt="">
                                     <div class="info">
                                         <div class="align-vertical" style="padding-top: 13.25px;">
                                             <span>16</span>
@@ -103,7 +103,7 @@
                         <div class="row">
                             <div class="col-md-6 col-xs-12 col-md-offset-1">
                                 <div class="thumbnail with-info">
-                                    <img src="images/720x490.png" alt="">
+                                    <img src="/assets/720x490.png" alt="">
                                     <div class="info">
                                         <div class="align-vertical" style="padding-top: 13.25px;">
                                             <span>16</span>
@@ -137,51 +137,4 @@
         </div><!-- /.container -->
     </div>
 
-    <section class="newsletter accent-bg">
-        <div class="background-image-holder overlay accent" data-stellar-background-ratio="0.9">
-            <img class="background-image" alt="Background Image" src="images/1600x900.png">
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 text-left">
-                    <h2 class="page-title">Join our newsletter</h2>
-                    <p>Bemporibus autem quibusdam et aut officiis debitis autem quibusdam et aut officiis debitis.</p>
-                </div>
-                <div class="col-md-4">
-                    <form class="newsletter-form">
-                        <input type="text" name="email" id="email" placeholder="Your email address">
-                    </form>
-                </div>
-                <div class="col-md-3">
-                    <a href="#" class="btn btn-primary">Join Now</a>
-                </div>
-            </div><!--end of row-->
-        </div><!--end of container-->
-    </section>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    <ul class="footer-navigation">
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./about.html">About</a></li>
-                        <li><a href="./catalog.html">Catalog</a></li>
-                        <li class="active"><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contact.html"><i class="fa fa-paper-plane"></i> Contact</a></li>
-                    </ul>
-                    <ul class="accepted-payments">
-                        <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
-                        <li><a href="#"><i class="fa fa-paypal"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-stripe"></i></a></li>
-                        <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-                    </ul>
-                    <div class="copyright">
-                        <p>Copyright © 2015 Chair. Created by Designifyer.com</p>
-                    </div>
-                </div>
-            </div><!-- /.row -->
-        </div><!-- /.container -->
-    </footer>
 </div><!-- /.main-container -->
