change rails paths

--- a/app/views/spree/static_content/_contact.html.erb
+++ b/app/views/spree/static_content/_contact.html.erb
@@ -1,4 +1,3 @@
-
 <div class="main-container">
     <header class="secondary">
         <div class="background-image-holder parallax-background overlay" data-stellar-background-ratio="0.9">
@@ -50,3 +49,4 @@
         </div><!-- /.container -->
     </section>
 </div><!-- /.main-container -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
