--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -26,10 +26,10 @@
             <div class="col-md-6 col-md-offset-3">
                 <ul class="footer-navigation">
                     <li class="active"><%= link_to 'Home', root_path %></li>
-                    <li><%= link_to 'Blog', 'blog' %></li>
-                    <li><%= link_to 'About', 'about' %></li>
+                    <li><%= link_to 'Blog', '/blog' %></li>
+                    <li><%= link_to 'About', '/about' %></li>
                      <li>
-                        <%= link_to 'contact' do %>
+                        <%= link_to '/contact' do %>
                             <i class="fa fa-paper-plane"></i> Contact
                         <% end %>
                     </li>
