--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -66,10 +66,10 @@
                         </li>
                     <% end %>
 
-                    <li><%= link_to 'Blog', 'blog' %></li>
-                    <li><%= link_to 'About', 'about' %></li>
+                    <li><%= link_to 'Blog', '/blog' %></li>
+                    <li><%= link_to 'About', '/about' %></li>
                     <li>
-                        <%= link_to 'contact' do %>
+                        <%= link_to '/contact' do %>
                             <i class="fa fa-paper-plane"></i> Contact
                         <% end %>
                     </li>
