--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -37,10 +37,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <!--figure id="logo" class="columns six" data-hook><%#= logo %></figure-->
-                <%= link_to root_path, class: 'navbar-brand' do %>
-                    EStore<span class="logo-dot accent-bg"></span>
-                <% end %>
+                <figure id="logo" class="columns six" data-hook><%= logo %></figure>
+                <%#= link_to root_path, class: 'navbar-brand' do %>
+                    <!--EStore<span class="logo-dot accent-bg"></span>-->
+                <% #end %>
                 <a href="#sidr" class="side-menu-opener mobile">
                     <div class="bars">
                         <span class="bar top"></span>
